# Face-Recognition

./: CMakeLists.txt  README.md
App_bin/: main.cpp
face-recognition/: face-recognition.cpp
util/camera/: gstUtility.cpp
